# glichess

./: .gitignore  CMakeLists.txt  Features.ini  Plan.drawio  README.md  SimpleChessCircuit.drawio  Wiring Diagram.drawio  glichess.ino  main.cpp
.github/workflows/: compile and test.yml  test.yml
3x3Proto/: glichess.ino
4x4Proto/: 4x4Proto.ino
documentation/: Chessmen.drawio  Implementation Steps.txt  Plan.drawio  Requirements.txt
games/chess/src/include/: ChessPiece.hpp  Pawn.hpp
games/chess/src/include/Chessmen/: King.hpp
resources/: glichess social.afdesign
src/: GameLogic.cpp  Pawn.cpp
src/include/: CoreComponent.hpp  Definitions.hpp  GameLogic.hpp  Parser.hpp  RingBuffer.hpp  UnifiedDispatch.hpp
src/include/Chessmen/: Bishop.hpp  ChessPiece.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
tests/: CMakeLists.txt
tests/_chess/: CMakeLists.txt
tests/_chessmen/: CMakeLists.txt  ut_chessmen.cpp  ut_pawn.cpp
